--- a/hotelaria.html
+++ b/hotelaria.html
@@ -4,64 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hospedagens</title>
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        h2 {
-            margin: 20px;
-            color: #333;
-        }
-        .container {
-            padding: 20px;
-        }
-        .grid {
-        display: flex;
-        gap: 20px;
-        overflow: auto;
-        }
-        .grid-item {
-            flex: 0 0 auto;
-            width: 250px;
-            border-radius: 10px;
-            overflow: hidden;
-            text-align: center;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .grid-item img {
-            width: 100%;
-            height: 150px;
-            object-fit: cover;
-        }
-        .destinos-grid {
-            display: flex;
-            gap: 20px;
-            margin-top: 20px;
-        }
-        .destinos-item {
-            flex: 1;
-            position: relative;
-            overflow: hidden;
-            border-radius: 10px;
-        }
-        .destinos-item img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-        .destinos-item span {
-            position: absolute;
-            bottom: 10px;
-            left: 10px;
-            color: white;
-            font-weight: bold;
-            background: rgba(0, 0, 0, 0.5);
-            padding: 5px 10px;
-            border-radius: 5px;
-        }
-    </style>
+
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/spots.css">
 </head>
@@ -97,6 +40,7 @@
     </div>
 </div>
 
+    <!-- Feito por Arthur-->
     <!-- Div onde o header vai carregar -->
     <div id="header-location"></div>
 
