Fazendo Modificações em Restaurantes, organizando o Css e incluindo títulos com imagens no Html

--- a/restaurantes.html
+++ b/restaurantes.html
@@ -10,11 +10,46 @@
 <body>
     <!-- Div onde o header vai carregar -->
     <div id="header-location"></div>
-
+    
+<!--Alterações de Luiz-->
     <main>
-        <h1>Esta será a página de perfil dos restaurantes.</h1>
+        <h1>Restaurante Teste</h1>
     </main>
+        <div class="restaurant-container">
+            <div class="restaurant-card">
+                <img src="image/Restaurante-prato-principal-1.png" alt="Restaurante-teste">
+            </div>
+            <div class="info-container">
+                <h2>Restaurante A</h2>
+                <p>Sugestão da Casa</p>
+                <p>⭐⭐⭐⭐☆ (4.5)</p>
+                <p>Preço médio: R$26,90</p>
+            </div>
+        </div>
 
+        <div class="restaurant-container">
+            <div class="restaurant-card">
+                <img src="image/Restaurante-prato-principal-2.png" alt="Restaurante-teste">
+            </div>
+            <div class="info-container">
+                <h2>Restaurante B</h2>
+                <p>Sugestão da Casa</p>
+                <p>⭐⭐⭐☆☆ (3.0)</p>
+                <p>Preço médio: R$18,90</p>
+            </div>
+        </div>
+
+        <div class="restaurant-container">
+            <div class="restaurant-card">
+                <img src="image/Restaurante-prato-principal-3.png" alt="Restaurante-teste">
+            </div>
+            <div class="info-container">
+                <h2>Restaurante C</h2>
+                <p>Sugestão da Casa</p>
+                <p>⭐⭐⭐⭐⭐ (5.0)</p>
+                <p>Preço médio: R$24,90</p>
+            </div>
+        </div>
     <!-- Div onde o footer vai carregar -->
     <div id="footer-location"></div>
 
